--- a/about-us.html
+++ b/about-us.html
@@ -63,6 +63,8 @@
                 <a href="contact.html" target="_blank">İletişim</a>
             </li>
         </ul>
+        <br>
+        <a href="kodluyoruz.org" target="_blank">Kodluyoruz</a>
     </nav>
 </footer>
 <!-- Footer - End -->
